Bug 1548499 - Set EGL context before call to eglSwapInterval. r=sotaro a=jcristau

The EGL context must be set before the call to eglSwapInterval to ensure that it will operate on the correct context.

Differential Revision: https://phabricator.services.mozilla.com/D30282

--HG--
extra : source : 25ba16a5d7f8805c0058ea55e75040d6c927867a